@@ -46,7 +46,7 @@ static const char short_options[] = "+hirc:VM:";
 static const struct option long_options[] = {
 	{"help",		CB_NO_ARG, NULL, 'h'},
 	{"info",		CB_NO_ARG, NULL, 'i'},
-	{"runtime-env",		CB_NO_ARG, NULL, 'r'},
+	{"runtime-conf",		CB_NO_ARG, NULL, 'r'},
 	{"config",		CB_RQ_ARG, NULL, 'C'},
 	{"version",   		CB_NO_ARG, NULL, 'V'},
 	{"module",		CB_RQ_ARG, NULL, 'm'},
@@ -112,7 +112,7 @@ cobcrun_print_usage (char * prog)
 	puts (_("  -V, -version                   display cobcrun and runtime version and exit"));
 	puts (_("  -i, -info                      display runtime information (build/environment)"));
 	puts (_("  -c <file>, -config=<file>      set runtime configuration from <file>"));
-	puts (_("  -r, -runtime-env               display current runtime configuration\n"
+	puts (_("  -r, -runtime-conf              display current runtime configuration\n"
 	        "                                 (value and origin for all settings)"));
 	puts (_("  -M <module>, -module=<module>  set entry point module name and/or load path"));
 	puts (_("                                 where -M module prepends any directory to the"));
@@ -293,9 +293,9 @@ process_command_line (int argc, char *argv[])
 			exit (0);
 
 		case 'r':
-			/* --runtime-env */
+			/* --runtime-conf */
 			cob_init (0, &argv[0]);
-			print_runtime_env ();
+			print_runtime_conf ();
 			exit (0);
 
 		case 'V':
